k8s/crawler-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-api
  labels:
    app: crawler-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crawler-api
  template:
    metadata:
      labels:
        app: crawler-api
    spec:
      containers:
        - name: crawler-api
          image: registry.crontech.com.br:5000/crawler-api:latest
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-api-svc
spec:
  selector:
    app: crawler-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
